# Sensor

./: Cargo.toml  New_Cubesat v7.stl  PythonSensors  README.md
CombinedSensors/: Cargo.toml  Readme.md  main.rs
CutDownCombSens/: Cargo.toml  Readme.md  main.rs
FileWrite/: Cargo.toml  Readme.md  bme_data.txt  lsm_data.txt  main.rs
PythonSensors/: SensorData.txt  sensor.py
bme/: Readme.md  main.rs
pythonsrc/: sensor.py
