[package]
name = "combsens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
bitflags = "1.2"
embedded-hal = "=1.0.0-alpha.5"
log = "0.4"
bme680 = "0.6.0"
linux-embedded-hal = "0.2.2"


tokio = {version = "1.35.1", features = ["full"]}






lsm303agr = "0.3.0"


[dev-dependencies]
env_logger = "0.9"
futures = { version = "0.3" }
i2cdev = "0.5"

tokio = "1.35.1"


[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0-alpha.1"




